--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ notifications:
     on_failue: always
 env:
   global:
+    - CATKIN_PARALLEL_JOBS=-p1
     - CATKIN_PARALLEL_TEST_JOBS=-p1
     - ROS_PARALLEL_TEST_JOBS=-j1
     - NOT_TEST_INSTALL=true
