[add] stomp and chomp planner

--- a/motoman_sia5_moveit_config/config/ompl_planning.yaml
+++ b/motoman_sia5_moveit_config/config/ompl_planning.yaml
@@ -146,9 +146,9 @@ arm:
     - LazyPRMstarkConfigDefault
     - SPARSkConfigDefault
     - SPARStwokConfigDefault
-  projection_evaluator: joints(joint_1,joint_2)
+  projection_evaluator: joints(joint_s,joint_l)
   longest_valid_segment_fraction: 0.005
-arm_flange:
+gripper:
   default_planner_config: kConfigDefault
   planner_configs:
     - SBLkConfigDefault
